# regulatory-intelligence-agent

./: .env.example  .gitignore  Makefile  README.md  agent.py  pyproject.toml  regsense.db
.devcontainer/: devcontainer.json
agents/: __init__.py  observability.py
agents/regulatory/: __init__.py  agent.py  prompt.py  tools.py
backend/: config.py  database.py  main.py  models.py
backend/routers/: alerts.py
backend/services/: feed_service.py
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: AlertDetail.tsx  AlertsList.tsx  AlertsToolbar.tsx  Dashboard.tsx  SeverityBadge.tsx  StatsBar.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  scroll-area.tsx  select.tsx  separator.tsx
frontend/src/lib/: utils.ts
frontend/src/types/: index.ts
